--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 /* bagian navbar */
 
 .kotak_panjang{
-  top: 5px;
+  top: 15px;
   left: 0;
   width: 100%;
   height: 45px;
@@ -57,6 +57,8 @@ body{
   width: 10px;
   height: 10px;
 }
+
+
 /* akhir bagian navbar */
 
 /* bagian konten */
@@ -68,9 +70,10 @@ body{
   padding-right: 10px;
   position: absolute;
   z-index: 20;
+  top : 40px;
   left: 0;
   border: 2px solid black;
-  max-width: 1000px
+  max-width: body.length;
 }
 
 .bagian_konten{
@@ -79,17 +82,27 @@ body{
   padding-right: 10px;
   position: absolute;
   z-index: 20;
-  left: -10500px;
+  top : 50px;
+  left: -1500px;
   border-left: 5px dot black;
+  background-color : rgb(214, 209, 209);
+  max-width: body.length;
 }
 
 /* akhir bagian konten */
 /* pemberian motion ke halaman*/
 .geserKanan{
   left:0;
+  transition :left 400ms;
 }
 
 .geserKiri{
   left : -15000px;
+  transition: left 1s;
 }
 /* akhir pemberian motion ke halaman */
+/* penambahan border merah dibawah tombol saat dipencet */
+.garisBawah{
+  border-bottom : 5px solid yellow;
+}
+/* akhir penambahan border merah dibawah tombol saat dipencet */
