--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
 body{
   max-width: 1000px
 }
+*{
+  font-size: 15px; 
+}
+@viewport{
+  width: device-width;
+}
 /* akhir untuk semuanya */
 
 /* bagian navbar */
@@ -74,6 +80,7 @@ body{
   left: 0;
   border: 2px solid black;
   max-width: body.length;
+  margin : 5px;
 }
 
 .bagian_konten{
@@ -87,6 +94,7 @@ body{
   border-left: 5px dot black;
   background-color : rgb(214, 209, 209);
   max-width: body.length;
+  margin : 5px;
 }
 
 /* akhir bagian konten */
